add lazy loading

--- a/TailwindINAngular/src/app/login/login.component.html
+++ b/TailwindINAngular/src/app/login/login.component.html
@@ -60,6 +60,7 @@
                 class="mr-4"
                   mat-icon-button
                   matSuffix
+                  type="button"
                   (click)="clickEvent()"
                   [attr.aria-label]="'Hide password'"
                   [attr.aria-pressed]="hide"
