--- a/TailwindINAngular/src/app/login/login.component.html
+++ b/TailwindINAngular/src/app/login/login.component.html
@@ -1,8 +1,8 @@
 <div class="w-full h-full px-40 py-10 custom-class-main justify-center border-4 align-middle flex ">
 
-    <main  class="mainContainer h-full flex flex-row max-md:flex-col w-full justify-self-center self-center mx-2 my-2 justify-between border-2 rounded shadow-md bg-white rounded-tl-lg rounded-bl-lg custom-class-main-1">
+    <main  class="mainContainer h-full flex flex-row max-md:flex-col w-full justify-self-center self-center mx-2 my-2 justify-between border-2 rounded shadow-md bg-white rounded-tl-lg rounded-bl-lg custom-class-main-1" [@slideToggleAnimation]>
 
-        <div class="LeftSide bGColor rounded-tl-lg custom-class-Ls rounded-bl-lg w-1/3 flex justify-center flex-col ms:hide ">
+        <div class="LeftSide bGColor rounded-tl-lg custom-class-Ls rounded-bl-lg w-1/3 flex justify-center flex-col ms:hide "  >
             <h1 class="font-bold text-white flex justify-center text-center my-4">
                 Hello, Friend!
             </h1>
