--- a/TailwindINAngular/src/app/home-page/home-page.component.html
+++ b/TailwindINAngular/src/app/home-page/home-page.component.html
@@ -1,7 +1,7 @@
 <h1 class="font-bold text-white flex justify-between rounded p-5 bg-blue-400 mx-5 my-5">
   <p>Start</p>
   <p>Main</p>
-  <p  (click)="profileUpdate()" class="text-gray-700 cursor-pointer underline">{{profile.name}}</p>
+  <p (click)="profileUpdate()" class="text-gray-700 cursor-pointer underline">{{profile.name}}</p>
 </h1>
 
 <button class="menuButton" mat-mini-fab aria-label="Example icon button with a menu icon" (click)="toggleDisplay()">
@@ -11,7 +11,7 @@
 <main class="main">
 
   <div *ngIf="isVisible" class="leftSide" [@slideToggleAnimation]>
-    <nav *ngIf="isVisible" [@slideToggleAnimation]  class="nav">
+    <nav *ngIf="isVisible" [@slideToggleAnimation] class="nav">
       <button (click)="allRecords()" class="bg-blue-600 text-white p-2 rounded ">All Records </button>
       <button (click)="RendertableAdmin()" class="bg-blue-600 text-white p-2 rounded ">Admin Records </button>
       <button (click)="RendertableUser()" class="bg-blue-600 text-white p-2 rounded ">User Records </button>
@@ -29,7 +29,20 @@
         <th mat-header-cell *matHeaderCellDef> {{c| uppercase}} </th>
         <td mat-cell *matCellDef="let element"> {{element[c]}} </td>
       </ng-container>
-      }
+      } 
+      <!-- @else {
+      <ng-container matColumnDef='actions'>
+        <th mat-header-cell *matHeaderCellDef class="actionHead"> {{c| uppercase}} </th>
+        <td mat-cell *matCellDef="let element">
+          @for(a of actions; track $index){
+          <button class="margin-btn" mat-raised-button aria-label="Example icon button with a delete icon"
+            (click)="call(element.id,a.lable)" [routerLink]="RouterLink(a.lable,element.id)">
+            {{a.lable}}
+          </button>
+          }
+        </td>
+      </ng-container>
+      } -->
 
       }
       <tr mat-header-row *matHeaderRowDef="TableHeading"></tr>
