--- a/ApiCallSequentially/src/app/table/table.component.html
+++ b/ApiCallSequentially/src/app/table/table.component.html
@@ -14,7 +14,7 @@
 
 </main>
 
-<main class="mainForm m-8" >
+<main class="mainForm m-8 pb-8" >
 
     <table mat-table [dataSource]="dataForTabletow" class="mat-elevation-z8" >
         @for(c of TableHeading; track $index){
